--- a/pages/index.html
+++ b/pages/index.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-Welcome to Dedale!
+Welcome to Dedale!djkjkljklj
+ceci est un,j test
 {% endblock %}
